# manifold-csg

./: .gitignore  API_COVERAGE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  MIGRATION_FROM_0.0.6.md  README.md  TODO.md  deny.toml
.cargo/: config.toml
.claude/: settings.json
.claude/skills/deep-review/: SKILL.md
.claude/skills/pr/: SKILL.md
.claude/skills/publish/: SKILL.md
.claude/skills/review/: SKILL.md
.claude/skills/update-upstream/: SKILL.md
.github/: lsan-suppressions.txt
.github/workflows/: ci.yml  pages.yml  sanitizer.yml
crates/manifold-csg/: Cargo.toml  build.rs
crates/manifold-csg-playground/: Cargo.toml  README.md  build.sh  package.json  serve.sh  test.sh
crates/manifold-csg-playground/src/: lib.rs
crates/manifold-csg-playground/tests/: load_wasm.mjs  rebuild.test.mjs  wasm.test.mjs
crates/manifold-csg-playground/web/: .gitignore  index.html  main.js  rebuild.js
crates/manifold-csg-sys/: Cargo.toml  build.rs  cache-version
crates/manifold-csg-sys/patches/: 0001-fix-meshgl-merge-ownership.patch  0001-make-concurrent-const-access-safe.patch  0001-upstream-1687-mergeRec-stability.patch  0002-upstream-1688-snapshot-meshIDCounter.patch
crates/manifold-csg-sys/src/: lib.rs
crates/manifold-csg-sys/wasm32-uu/: CMakeLists.txt  diagnose.sh
crates/manifold-csg-sys/wasm32-uu/include/: __config_site
crates/manifold-csg-sys/wasm32-uu/patches/: 0001-manifold-ifdef-iostream.patch  README.md
crates/manifold-csg/examples/: advanced.rs  basics.rs  cross_sections.rs  wasm32_uu_smoke.rs
crates/manifold-csg/src/: bounding_box.rs  cross_section.rs  execution.rs  lib.rs  manifold.rs  mesh.rs  ray.rs  rect.rs  samples.rs  triangulation.rs  types.rs
crates/manifold-csg/tests/: integration.rs
crates/manifold-csg/wasm32-uu-runner/: run.mjs
crates/manifold3d/: Cargo.toml  README.md
crates/manifold3d-macros/: Cargo.toml  README.md
crates/manifold3d-macros/src/: lib.rs
crates/manifold3d-sys/: Cargo.toml  README.md
crates/manifold3d-sys/src/: lib.rs
crates/manifold3d/src/: lib.rs
docs/: wasm-emscripten-plan.md
docs/plans/: wasm-emscripten.md  wasm-unknown-unknown.md
