[workspace]
members = [
    "crates/manifold-csg-sys",
    "crates/manifold-csg",
    "crates/manifold3d-sys",
    "crates/manifold3d",
    "crates/manifold3d-macros",
    "crates/manifold-csg-playground",
]
resolver = "2"

[workspace.package]
version = "0.1.6"
edition = "2024"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/zmerlynn/manifold-csg"
rust-version = "1.85"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[workspace.lints.clippy]
undocumented_unsafe_blocks = "deny"
multiple_unsafe_ops_per_block = "deny"
# is_multiple_of() is unstable on our MSRV (1.85)
manual_is_multiple_of = "allow"
