[package]
name = "manifold-csg-sys"
description = "Raw FFI bindings to the complete manifold3d v3.4.1 C API (256 functions) for constructive solid geometry"
version = "3.4.100"
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
keywords = ["csg", "geometry", "mesh", "manifold", "ffi"]
categories = ["algorithms", "external-ffi-bindings"]
links = "manifold"
build = "build.rs"

[features]
default = ["parallel"]
parallel = []

[build-dependencies]
cmake = "0.1"

[lints]
workspace = true
