[package]
name = "manifold-csg-sys"
description = "Raw FFI bindings to the manifold3d C API for constructive solid geometry"
version = "3.4.104"
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
keywords = ["csg", "geometry", "mesh", "manifold", "ffi"]
categories = ["algorithms", "external-ffi-bindings"]
links = "manifold"
build = "build.rs"

[features]
default = ["parallel"]
parallel = []

[build-dependencies]
cmake = "0.1"

[package.metadata.docs.rs]
features = ["parallel"]

[lints]
workspace = true
