[package]
name = "manifold3d-macros"
description = "DEPRECATED: Use closures with the manifold3d crate instead. See the migration guide."
version = "0.0.4"
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["manifold"]
categories = ["rendering"]

[lib]
proc-macro = true

[dependencies]

[lints]
workspace = true
